tests/fixtures/errors/invalid_preproc_while_iteration_limit.puml
@startuml
!define LOOP 1
!while LOOP
Alice -> Bob: spin
!endwhile
@enduml
